fixed dropdown text getting cut off

--- a/styles/main.css
+++ b/styles/main.css
@@ -174,7 +174,7 @@ form {
     background-color: #fae3d9;
     margin: 2px;
     width: 150px;
-    height: 30px;
+    height: 40px;
     border-radius: 10px;
 }
 
